--- a/_css/master.css
+++ b/_css/master.css
@@ -103,7 +103,8 @@ input[disabled],
     opacity: 0.7;
 }
 .form_style1 input[type='text'],
-.form_style1 textarea{
+.form_style1 textarea,
+.form_style1 select{
     font-family: 'iranSans';
     display: block;
     width: 100%;
@@ -159,11 +160,12 @@ input[disabled],
 .check_style1 > label{
     cursor: pointer;
 }
-.check_style1 input[type='checkbox']{
+.check_style1 input[type='checkbox'],
+.check_style1 input[type='radio']{
     height: 14px;
     width: 14px;
 }
-.check_style1 input[type='radio']{}
+
 .check_style1 .uk-checkbox:checked,
 .check_style1 .uk-checkbox:indeterminate,
 .check_style1 .uk-radio:checked{
