--- a/static/_css/master.css
+++ b/static/_css/master.css
@@ -38,7 +38,6 @@ input,textarea{outline: 0 none;}
 input,textarea,a,i{-webkit-transition:all .4s;transition:all .4s;}
 textarea{resize:none;}
 select option{padding:0 10px;line-height:25px;}
-input.error, textarea.error{border:1px dotted #FF0000;}
 input[type=submit],
 input[type=checkbox],
 input[type=radio],
@@ -79,6 +78,9 @@ input[disabled],
 /*#1*/
 .form_style1{
     padding: 0 12%;
+}
+.form_style1 .fs1_item{
+    position: relative;
 }
 .form_style1 .fs1_label{
     display: inline-block;
@@ -128,6 +130,17 @@ input[disabled],
     padding: 15px;
     background: #f9f9f9;
 }
+.form_style1 label.error_style1{
+    position: absolute;
+    left: 0;
+    top: 6px;
+    color: #ff3359;
+    font-size: 0.75rem;
+    background: #fff5f5;
+    padding: 0 5px;
+}
+.form_style1 label.error_style1[for='skill']{top: 0;}
+.form_style1 label.error_style1[for='soldiership_status']{top: 45px;}
 
 .form_style1 .fs1_action {
     padding: 0 !important;
